必要そうなファイルを追加したのと、パッケージ名の変更。

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.modu8config">
+    package="com.abplus.modu8config">
    <application
         android:label="modu8config"
         android:icon="@mipmap/ic_launcher">
